@@ -1,5 +1,6 @@
 2017-03-15  Kirit Saelensminde  <kirit@felspar.com>
- Allow us to move the underlying string out of a tagged string rvalue.
+ * Improve the way that the JSON atomic type can be constructed from integral types.
+ * Allow us to move the underlying string out of a tagged string rvalue.
 
 2017-03-12  Kirit Saelensminde  <kirit@felspar.com>
  Make the object logging functions properly variadic.
